# QuizApp

./: .coverage  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
app/: .coverage  alembic.ini  celery.py  logs.txt  main.py
app/core/: config.py  dependencies.py  logger.py  tasks.py
app/crud/: user.py
app/db/: pg_db.py  redis_db.py
app/exceptions/: auth.py  base.py  company.py  db.py  user.py
app/migrations/: env.py
app/models/: __init__.py  answer.py  answered_question.py  company.py  invitation.py  member.py  models.py  notification.py  question.py  quiz.py  user.py
app/repositories/: __init__.py  answer.py  answered_question.py  company.py  invitation.py  member.py  notification.py  question.py  quiz.py  repository.py  unitofwork.py  user.py
app/routers/: answer.py  auth.py  check_connection.py  company.py  invitation.py  invites.py  me.py  member.py  question.py  quiz.py  requests.py  user.py  user_crud.py
app/schemas/: answer.py  answered_question.py  company.py  invitation.py  member.py  notification.py  pagination.py  question.py  quiz.py  token.py  user.py
app/services/: analytics.py  answer.py  answered_question.py  auth.py  company.py  data_export.py  data_import.py  invitation.py  member.py  member_management.py  member_queries.py  member_requests.py  notification.py  question.py  quiz.py  user.py
app/tests/: conftest.py  test_analytics.py  test_answer.py  test_answered_question.py  test_celery.py  test_company_actions.py  test_company_crud.py  test_home.py  test_notification.py  test_pg_db.py  test_quiz.py  (+4 more)
(+31 files in other folders)
