[tool.poetry]
name = "meduzzen-internship"
version = "0.1.0"
description = ""
authors = ["Andrew Kabanov <kbnandrii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pytest = "^8.2.2"
httpx = "^0.27.0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
databases = "^0.9.0"
aioredis = "^2.0.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
build-backend = "poetry.core.masonry.api"
